--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@zxing/library": "^0.20.0",
     "lodash": "^4.17.21",
-    "vuetify": "^2.6.10"
+    "vuetify": "^2.6.10",
+    "vue-toastify": "1.8.1"
   }
 }
