--- a/posawesome/posawesome/doctype/pos_settings_panel/pos_settings_panel.json
+++ b/posawesome/posawesome/doctype/pos_settings_panel/pos_settings_panel.json
@@ -8,7 +8,9 @@
  "engine": "InnoDB",
  "field_order": [
   "allow_cross_branch_return",
-  "country_code"
+  "country_code",
+  "column_break_1mdhc",
+  "use_outstanding_amount_in_sales_invoice"
  ],
  "fields": [
   {
@@ -22,12 +24,22 @@
    "fieldname": "country_code",
    "fieldtype": "Data",
    "label": "Country Code"
+  },
+  {
+   "fieldname": "column_break_1mdhc",
+   "fieldtype": "Column Break"
+  },
+  {
+   "default": "0",
+   "fieldname": "use_outstanding_amount_in_sales_invoice",
+   "fieldtype": "Check",
+   "label": "Use Outstanding Amount In Sales Invoice"
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2024-05-08 16:08:04.215354",
+ "modified": "2024-06-04 09:28:59.790484",
  "modified_by": "Administrator",
  "module": "POSAwesome",
  "name": "POS Settings Panel",
