--- a/posawesome/posawesome/custom/project_user.json
+++ b/posawesome/posawesome/custom/project_user.json
@@ -25,7 +25,7 @@
    "hide_border": 0,
    "hide_days": 0,
    "hide_seconds": 0,
-   "idx": 5,
+   "idx": 6,
    "ignore_user_permissions": 0,
    "ignore_xss_filter": 0,
    "in_global_search": 0,
@@ -71,7 +71,7 @@
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
-   "creation": "2025-01-07 13:07:38.966013",
+   "creation": "2025-01-07 13:58:44.527978",
    "default_value": null,
    "doc_type": "Project User",
    "docstatus": 0,
@@ -79,7 +79,7 @@
    "field_name": null,
    "idx": 0,
    "is_system_generated": 0,
-   "modified": "2025-01-07 13:07:38.966013",
+   "modified": "2025-01-07 13:58:44.527978",
    "modified_by": "Administrator",
    "module": null,
    "name": "Project User-main-field_order",
@@ -87,7 +87,53 @@
    "property": "field_order",
    "property_type": "Data",
    "row_name": null,
-   "value": "[\"user\", \"email\", \"image\", \"column_break_2\", \"full_name\", null, \"welcome_email_sent\", \"view_attachments\", \"section_break_5\", \"project_status\"]"
+   "value": "[\"user\", \"email\", \"image\", \"column_break_2\", \"full_name\", \"custom_position\", \"welcome_email_sent\", \"view_attachments\", \"section_break_5\", \"project_status\"]"
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "creation": "2025-01-07 13:58:44.593479",
+   "default_value": null,
+   "doc_type": "Project User",
+   "docstatus": 0,
+   "doctype_or_field": "DocField",
+   "field_name": "welcome_email_sent",
+   "idx": 0,
+   "is_system_generated": 0,
+   "modified": "2025-01-07 13:58:44.593479",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project User-welcome_email_sent-default",
+   "owner": "Administrator",
+   "property": "default",
+   "property_type": "Text",
+   "row_name": null,
+   "value": "1"
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "creation": "2025-01-07 13:59:08.544608",
+   "default_value": null,
+   "doc_type": "Project User",
+   "docstatus": 0,
+   "doctype_or_field": "DocField",
+   "field_name": "welcome_email_sent",
+   "idx": 0,
+   "is_system_generated": 0,
+   "modified": "2025-01-07 13:59:08.544608",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project User-welcome_email_sent-read_only",
+   "owner": "Administrator",
+   "property": "read_only",
+   "property_type": "Check",
+   "row_name": null,
+   "value": "1"
   }
  ],
  "sync_on_migrate": 1
